<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nestedScrollView"

    android:padding="20dp"
    tools:context=".activities.MainActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:textColorHint="@color/colorAccent"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorPrimary">

            </android.support.design.widget.TextInputEditText>



        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                android:textColorHint="@color/colorAccent"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorPrimary">

            </android.support.design.widget.TextInputEditText>



        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:textColorHint="@color/colorAccent"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorPrimary">

            </android.support.design.widget.TextInputEditText>



        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutStudentID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextStudentID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_student_id"
                android:textColorHint="@color/colorAccent"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorPrimary">

            </android.support.design.widget.TextInputEditText>



        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutMajor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextMajor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_major"
                android:textColorHint="@color/colorAccent"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorPrimary">

            </android.support.design.widget.TextInputEditText>



        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:textColorHint="@color/colorAccent"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorPrimary">

            </android.support.design.widget.TextInputEditText>




        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                android:textColorHint="@color/colorAccent"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorPrimary">

            </android.support.design.widget.TextInputEditText>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColor="@color/colorPrimary"
                android:hint="@string/text_register">

            </android.support.v7.widget.AppCompatButton>


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewLinkLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/text_already_member"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary">

            </android.support.v7.widget.AppCompatTextView>

        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.LinearLayoutCompat>



</android.support.v4.widget.NestedScrollView>